src/objects/Well__c.object
<CustomObject>
    <fields>
        <fullName>API10__c</fullName>
        <description>API/Unique Well Identifier (10 Digit)</description>
        <externalId>true</externalId>
        <inlineHelpText>API/Unique Well Identifier (10 Digit)</inlineHelpText>
        <label>API10</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>API14__c</fullName>
        <description>Full API/UWI identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>Full API/UWI identifier</inlineHelpText>
        <label>API14</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ActualTotalRevenueLastMonth__c</fullName>
        <label>Actual Total Revenue Last Month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Operator_Name__c</fullName>
        <label>Current Operator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Operator (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Wells</relationshipLabel>
        <relationshipName>Wells</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Production_Month_Used__c</fullName>
        <description>First Production Month used in the calculation for 3 month production oil, gas, and totals</description>
        <inlineHelpText>First Production Month used in the calculation for 3 month production oil, gas, and totals</inlineHelpText>
        <label>First Production Month Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Production_Month__c</fullName>
        <label>First Production Month</label>
        <summarizedField>Monthly_Production__c.Production_Date__c</summarizedField>
        <summaryForeignKey>Monthly_Production__c.Well__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Formation_Objective_Code__c</fullName>
        <label>Formation Objective Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gas_Prod_Last_3_Months__c</fullName>
        <description>Sum of the most recent 3 month of Gas production within the last 9 months.</description>
        <inlineHelpText>Sum of the most recent 3 month of Gas production within the last 9 months.</inlineHelpText>
        <label>Gas Prod Last 3 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gas_Prod_Last_Month__c</fullName>
        <description>The most recent month of Gas production within the last 9 months.</description>
        <inlineHelpText>The most recent month of Gas production within the last 9 months.</inlineHelpText>
        <label>Gas Prod Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gas_Rev_Last_3_Months_Net__c</fullName>
        <description>Gas Production Fee * Gas Revenue Last Three Months</description>
        <formula>$CustomMetadata.Production_Fee__mdt.Gas.Value__c *   Gas_Rev_Last_3_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gas Production Fee * Gas Revenue Last Three Months</inlineHelpText>
        <label>Gas Rev Last 3 Months (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_Rev_Last_3_Months__c</fullName>
        <description>The most recent 3 months of Gas production within the last 9 months * Avg gas price for that month</description>
        <inlineHelpText>The most recent 3 months of Gas production within the last 9 months * Avg gas price for that month</inlineHelpText>
        <label>Gas Rev Last 3 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_Rev_Last_Month_Net__c</fullName>
        <description>Gas Production Fee * Last Month Gas Revenue</description>
        <formula>$CustomMetadata.Production_Fee__mdt.Gas.Value__c *  Gas_Rev_Last_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gas Production Fee * Last Month Gas Revenue</inlineHelpText>
        <label>Gas Rev Last Month (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gas_Rev_Last_Month__c</fullName>
        <description>The most recent month of Gas production within the last 9 months * Avg gas price for that month</description>
        <inlineHelpText>The most recent month of Gas production within the last 9 months * Avg gas price for that month</inlineHelpText>
        <label>Gas Rev Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hole_Direction__c</fullName>
        <label>Hole Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vertical</fullName>
                </value>
                <value>
                    <fullName>Directional</fullName>
                </value>
                <value>
                    <fullName>HORIZONTAL</fullName>
                    <label>Horizontal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Paying_calc__c</fullName>
        <description>Returns true if there is monthly production activity data in the last 12 months. Calculated in GIS database.</description>
        <formula>IF(YEAR(Last_Production_Month__c ) - YEAR( TODAY() )&lt;1,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Returns true if there is monthly production activity data in the last 12 months. Calculated in GIS database.</inlineHelpText>
        <label>Is Paying</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Permit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Returns True if the record is a Well Permit only.  Calculated in GIS Database.</description>
        <inlineHelpText>Returns True if the record is a Well Permit only.  Calculated in GIS Database.</inlineHelpText>
        <label>Is Permit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <formula>IF( CONTAINS(wellStatus__c, &apos;Permit&apos;), Permit_Date__c ,Spud_Date__c   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastActivityType__c</fullName>
        <formula>IF(CONTAINS(wellStatus__c,&apos;Permit&apos;), &apos;Permit&apos;, &apos;Spud&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <description>Most recent Permit or Spud date - type of activity will be specified in the Last Activity Type field.  Calculated by GIS database.</description>
        <inlineHelpText>Most recent Permit or Spud date - type of activity will be specified in the Last Activity Type field.  Calculated by GIS database.</inlineHelpText>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Type__c</fullName>
        <description>Type of activity for Last Activity Date field.  Calculated by GIS database.</description>
        <inlineHelpText>Type of activity for Last Activity Date field.  Calculated by GIS database.</inlineHelpText>
        <label>Last Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permit</fullName>
                </value>
                <value>
                    <fullName>Spud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Production_Date__c</fullName>
        <description>Date of the last Monthly Production record.  Calculated by GIS database.</description>
        <inlineHelpText>Date of the last Monthly Production record.  Calculated by GIS database.</inlineHelpText>
        <label>Last Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Production_Month_Used__c</fullName>
        <description>Month used for 1 month production oil, gas, and totals and Last Production Month used in the calculation for 3 month production oil, gas, and totals.</description>
        <inlineHelpText>Month used for 1 month production oil, gas, and totals and Last Production Month used in the calculation for 3 month production oil, gas, and totals.</inlineHelpText>
        <label>Last Production Month Used</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Production_Month__c</fullName>
        <description>Last Month from Monthly Production record for Well</description>
        <inlineHelpText>Last Month from Monthly Production record for Well</inlineHelpText>
        <label>Last Production Month</label>
        <summarizedField>Monthly_Production__c.Production_Date__c</summarizedField>
        <summaryForeignKey>Monthly_Production__c.Well__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lease_Designation_Name__c</fullName>
        <label>Lease Designation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Concatenated__c</fullName>
        <label>Location Concatenated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oil_Prod_Last_3_Months__c</fullName>
        <description>Sum of the most recent 3 month of Oil production within the last 9 months.</description>
        <inlineHelpText>Sum of the most recent 3 month of Oil production within the last 9 months.</inlineHelpText>
        <label>Oil Prod Last 3 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Prod_Last_Month__c</fullName>
        <description>The most recent month of Oil production within the last 9 months.</description>
        <inlineHelpText>The most recent month of Oil production within the last 9 months.</inlineHelpText>
        <label>Oil Prod Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oil_Rev_Last_3_Months_Net__c</fullName>
        <description>Oil Production Fee * Last 3 Months Oil Rev</description>
        <formula>$CustomMetadata.Production_Fee__mdt.Oil.Value__c *   Oil_Rev_Last_3_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Oil Production Fee * Last 3 Months Oil Rev</inlineHelpText>
        <label>Oil Rev Last 3 Months (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oil_Rev_Last_3_Months__c</fullName>
        <description>The most recent 3 months of Oil production within the last 9 months * Avg gas price for that month</description>
        <inlineHelpText>The most recent 3 months of Oil production within the last 9 months * Avg gas price for that month</inlineHelpText>
        <label>Oil Rev Last 3 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oil_Rev_Last_Month_Net__c</fullName>
        <description>Oil Production Fee * Oil Revenue Last Month</description>
        <formula>$CustomMetadata.Production_Fee__mdt.Oil.Value__c *  Oil_Rev_Last_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Oil Production Fee * Oil Revenue Last Month</inlineHelpText>
        <label>Oil Rev Last Month (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oil_Rev_Last_Month__c</fullName>
        <description>The most recent month of Oil production within the last 9 months * Avg gas price for that month</description>
        <inlineHelpText>The most recent month of Oil production within the last 9 months * Avg gas price for that month</inlineHelpText>
        <label>Oil Rev Last Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paying_Category__c</fullName>
        <description>Categorizes well in to three types (Permit, Horiz, Vertical)</description>
        <formula>if (Is_Permit__c,&apos;Permit&apos;, 
if (ISPICKVAL(Hole_Direction__c,&apos;horizontal&apos;),&apos;Horizontal&apos;,&apos;Vertical&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Categorizes well in to three types (Permit, Horiz, Vertical)</inlineHelpText>
        <label>Paying Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Date__c</fullName>
        <label>Permit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permit_Expired__c</fullName>
        <description>Returns true if last activity was a permit and permit has expired (24 months for TX, NM or 18 months for OK)</description>
        <formula>and( Is_Permit__c ,
Today() &gt; CASE(State__c, &apos;NEW MEXICO&apos;,  Addmonths(Permit_Date__c,24) , &apos;TEXAS&apos;, Addmonths(Permit_Date__c,24),&apos;OKLAHOMA&apos;,Addmonths(Permit_Date__c,18),null))</formula>
        <inlineHelpText>Returns true if last activity was a permit and permit has expired (24 months for TX, NM or 18 months for OK)</inlineHelpText>
        <label>Permit Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Actual_Start_Date__c</fullName>
        <label>Production Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rig_Release_Date__c</fullName>
        <label>Rig Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>Source of the well information (IHS, DrillingInfo, etc.)</inlineHelpText>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spud_Date__c</fullName>
        <label>Spud Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Current__c</fullName>
        <label>Status - Current</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Final__c</fullName>
        <label>Status - Final</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Depth_TVD__c</fullName>
        <label>Total Depth TVD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Depth__c</fullName>
        <label>Total Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Last_3_Months_Net__c</fullName>
        <description>Total Net Revenues from Well for most recent 3 months</description>
        <formula>Gas_Rev_Last_3_Months_Net__c +  Oil_Rev_Last_3_Months_Net__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Net Revenues from Well for most recent 3 months</inlineHelpText>
        <label>Total Rev Last 3 Months (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Last_3_Months__c</fullName>
        <description>Oil Revenue last 3 months + Gas Revenue Last 3 months</description>
        <formula>Oil_Rev_Last_3_Months__c +  Gas_Rev_Last_3_Months__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Oil Revenue last 3 months + Gas Revenue Last 3 months</inlineHelpText>
        <label>Total Rev Last 3 Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Rev_Last_Month_Net__c</fullName>
        <description>Net Oil Revenues Last Month + Net Gas Revenues Last Month</description>
        <formula>Oil_Rev_Last_Month_Net__c +  Gas_Rev_Last_Month_Net__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net Oil Revenues Last Month + Net Gas Revenues Last Month</inlineHelpText>
        <label>Total Rev Last Month (Net)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Revenue_Allocated__c</fullName>
        <description>Actual total revenue received to-date</description>
        <label>Actual Total Revenue (To-Date)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Wells</relationshipLabel>
        <relationshipName>Wells</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dataBasin__c</fullName>
        <description>Link to DataBasin application</description>
        <formula>HYPERLINK(&quot;https://databasin.strongholdresourcepartners.com/wells/&quot; &amp;  API10__c, &quot;View Raw Data&quot; , &quot;_blank&quot;)</formula>
        <inlineHelpText>Link to DataBasin application</inlineHelpText>
        <label>DataBasin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>insights__c</fullName>
        <formula>HYPERLINK(&quot;https://insights.strongholdresourcepartners.com/wells/&quot; &amp; API10__c, &quot;View in Insights&quot; , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insights</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lateralLength__c</fullName>
        <label>Lateral Length (DI)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wellStatus__c</fullName>
        <formula>IF(  NOT(ISBLANK(First_Production_Month__c)) ,&apos;Producing&apos;, IF(  AND(NOT(ISBLANK(Spud_Date__c)),Today() - Spud_Date__c&gt;=730),&apos;Shut-In&apos;,IF(NOT(ISBLANK(Spud_Date__c)) ,&apos;DUC&apos;,IF(  TODAY() -  Permit_Date__c &gt;= 730 ,&apos;Expired Permits&apos; , IF(  NOT(ISBLANK(Permit_Date__c)) ,&apos;Permit&apos; ,&apos;&apos;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Status</label>
        <type>Text</type>
    </fields>
    <label>Well</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>API10__c</columns>
        <columns>Hole_Direction__c</columns>
        <columns>Current_Operator__c</columns>
        <columns>Is_Permit__c</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>Last_Activity_Type__c</columns>
        <columns>Last_Production_Date__c</columns>
        <columns>Permit_Date__c</columns>
        <columns>Spud_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Missing_Operator</fullName>
        <columns>Current_Operator_Name__c</columns>
        <columns>Current_Operator__c</columns>
        <columns>NAME</columns>
        <columns>API10__c</columns>
        <columns>Hole_Direction__c</columns>
        <columns>Is_Permit__c</columns>
        <columns>Last_Activity_Date__c</columns>
        <columns>Last_Activity_Type__c</columns>
        <columns>Last_Production_Date__c</columns>
        <columns>Permit_Date__c</columns>
        <columns>Spud_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Operator__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Current_Operator_Name__c</field>
            <operation>contains</operation>
            <value>arrow oil</value>
        </filters>
        <label>All - Missing Operator</label>
    </listViews>
    <listViews>
        <fullName>ERC_Animal_Wells</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>grantham</value>
        </filters>
        <label>ERC Animal Wells</label>
    </listViews>
    <listViews>
        <fullName>Wells_Missing_Units</fullName>
        <columns>NAME</columns>
        <columns>API10__c</columns>
        <columns>Unit__c</columns>
        <columns>Hole_Direction__c</columns>
        <columns>Current_Operator__c</columns>
        <columns>Is_Permit__c</columns>
        <columns>Last_Production_Date__c</columns>
        <columns>Permit_Date__c</columns>
        <columns>Spud_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Unit__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Hole_Direction__c</field>
            <operation>equals</operation>
            <value>HORIZONTAL</value>
        </filters>
        <label>Wells Missing Units (Horizontal Only)</label>
    </listViews>
    <nameField>
        <label>Well Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wells</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>